# sdl_game

./: .gitmodules  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Collision.cpp  Collision.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Text.cpp  Text.h  Vector2D.cpp  Vector2D.h  compile_commands.json  game.cpp  game.h  main.cpp  textureManager.cpp  textureManager.h
Dev/SDL2_image-2.0.1/lib/x64/: CMakeLists.txt
ECS/: Animation.h  AnimationComponent.h  AnimationSystem.h  ArrowSystem.h  CleanupComponent.h  ColliderComponent.h  Components.h  DeadComponent.h  DeadEntitiesCleanupSystem.h  ECS.cpp  ECS.h  EntityManager.h  KeyboardController.h  PlayerMovementSystem.h  PositionComponent.h  ProjectileComponent.h  SpriteComponent.h  Systems.h  TileComponent.h  TransformComponent.h  Vector2D.cpp  Vector2D.h
assets/: arrow.aseprite  knight.aseprite  knight.json  link-2.json  link_walk_right.aseprite  link_walk_right.json  map_attempt1.pyxel  stupid_map.pyxel  stupid_map2  stupid_map_2.xml  sword.aseprite  thunder.aseprite  thunder.json  tiles2.json
assets/pyexeledit/: dirt.pyxel  enemy.pyxel  grass.pyxel  water.pyxel
assets/tilesets/: map  map.xml  map2  map~
build - Copy/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  pugixml.pc
build - Copy/libraries/: Makefile  cmake_install.cmake
build - Copy/libraries/pugixml/: Makefile  cmake_install.cmake
test/: a.out  test_ecs.cpp
