project(Game)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_DEBUG  "-g")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(SDL2DIR "${PROJECT_SOURCE_DIR}/SDL2-devel-2.0.9-VC/SDL2-2.0.9/")
set(SDL2_PATH "${PROJECT_SOURCE_DIR}/SDL2-devel-2.0.9-VC/SDL2-2.0.9/")

find_package(SDL2 REQUIRED)

include_directories(${SDL2_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/ECS)
include_directories(${PROJECT_SOURCE_DIR})
#include_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2/include)
include_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2_image-2.0.1/include)
link_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2/lib/x86)
link_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2_image-2.0.1/lib/x86)
add_executable(Game main.cpp game.cpp textureManager.cpp GameObject.cpp Map.cpp Vector2D.cpp Collision.cpp ECS/ECS.cpp)

target_link_libraries(Game SDL2main SDL2 SDL2_image libpng16-16)
