set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_BUILD_TYPE Debug)
set (CMAKE_CXX_STANDARD 14)
project(Game)
add_executable(Game main.cpp game.cpp textureManager.cpp GameObject.cpp Map.cpp Vector2D.cpp Collision.cpp)
# add_library(SDL2 STATIC IMPORTED)
# add_library(SDL2_image STATIC IMPORTED)
# set_property(TARGET SDL2 PROPERTY IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/Dev/SDL2/lib/x64/SDL2.lib)
# set_property(TARGET SDL2_image PROPERTY IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/Dev/SDL2_image-2.0.1/lib/x64/SDL2_image.lib)
# target_include_directories(Game PUBLIC ${CMAKE_SOURCE_DIR}/Dev/SDL2/include/)
# target_include_directories(Game PUBLIC ${CMAKE_SOURCE_DIR}/Dev/SDL2_image-2.0.1/include/)
target_link_libraries(Game SDL2 SDL2_image)
