project(Game)
if(COMMAND cmake_policy)
cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
cmake_minimum_required(VERSION 3.13)
# set(CMAKE_C_COMPILER gcc)
# set(CMAKE_CXX_COMPILER g++)
set(CMAKE_BUILD_TYPE Debug)
# set(CMAKE_CXX_FLAGS_DEBUG  "-g")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${Game_SOURCE_DIR}/cmake")
set(SDL2DIR "${PROJECT_SOURCE_DIR}/Dev/SDL2")
set(SDL2_PATH "${PROJECT_SOURCE_DIR}/Dev/SDL2")
set(SDL2_LIBRARY "${PROJECT_SOURCE_DIR}/Dev/SDL2/lib/x86")

find_package(SDL2 REQUIRED)
#add_subdirectory(${PROJECT_SOURCE_DIR}/Dev/SDL2_image-2.0.1/lib/x86/)
include_directories(${SDL2_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/ECS)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/libraries/pugixml/src)
#include_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2/include)
include_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2_image-2.0.1/include)
link_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2/lib/x86)
link_directories(${PROJECT_SOURCE_DIR}/Dev/SDL2_image-2.0.1/lib/x86)
add_subdirectory(libraries)
add_executable(Game main.cpp game.cpp AssetManager.cpp textureManager.cpp GameObject.cpp Map.cpp Vector2D.cpp Collision.cpp ECS/ECS.cpp)

target_link_libraries(Game SDL2main SDL2 SDL2_image pugixml)


